--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
     "concurrently": "^9.0.1"
   },
   "scripts": {
-    "start": "concurrently \"npm start --prefix client\" \"npm start --prefix server\""
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "react-scripts": "^5.0.1"
   }
 }
